service/kubernetes/dashboard/dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "https"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: kubernetes-dashboard-auth
    ingress.kubernetes.io/auth-realm: "traefik"
spec:
  rules:
  - host: dashboard.kub.teecu.be
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: http
